# lang-portal/backend-go/docs/swagger.yaml
@@ -244,6 +244,20 @@ definitions:
       word_id:
         type: integer
     type: object
+  models.WordReviewRequest:
+    properties:
+      correct:
+        type: boolean
+    required:
+    - correct
+    type: object
+  models.WordReviewResponse:
+    properties:
+      success:
+        type: boolean
+      word_id:
+        type: integer
+    type: object
 host: localhost:8080
 info:
   contact: {}
@@ -617,6 +631,39 @@ paths:
           schema:
             $ref: '#/definitions/models.StudySessionWordsResponse'
       summary: Get words for a study session
+      tags:
+      - study_sessions
+  /api/study_sessions/{id}/words/{word_id}/review:
+    post:
+      consumes:
+      - application/json
+      description: Records whether a word was correctly or incorrectly reviewed in
+        a study session
+      parameters:
+      - description: Study Session ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Word ID
+        in: path
+        name: word_id
+        required: true
+        type: integer
+      - description: Review request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/models.WordReviewRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.WordReviewResponse'
+      summary: Review a word in a study session
       tags:
       - study_sessions
   /api/words:
